Fixed external properties not binding properly, externalized filter properties, adjusted dockerfile